# gl-spheres

./: .gitignore  CMakeLists.txt  build.sh  notes.org  serve.sh
docs/: index.html  main.data  main.js
pages/: main.data  main.js
server/: Server.py
shaders/: fragment.shader  vertex.shader
shell-files/: create-context.js
src/: dialogs.c++  main-bak.c++  main.c++
src/dialogs/: dialogs.c++  dialogs.h++
src/normals/: normals.c++  normals.h++
src/sphere/: sphere.c++  sphere.h++
src/util/: out.c++  out.h++
src/util/file_util/: file_util.h++
